--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@ body {
 
 .container-one{
     background-color: #1F2937;
-    height: 300px;
+    height: 400px;
+    padding-left: 300px;
+    padding-right: 300px;
 
     display: flex;
     flex-direction: column;
@@ -23,20 +25,51 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 16px 32px 16px 32px;
 }
 
 .subcontainer {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    padding: 16px 32px 16px 32px;
 }
 
 .subcontainer-left {
+    width: 50%;
+    padding: 10px;
+}
+
+span.main-text {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #f9faf8
+}
+
+span.secondary-text {
+    font-size: 18px;
+    color: #f9faf8
+}
+
+.sign-up, .sign-up a {
+    background-color: #3882f6;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    border: none;
+    border-radius: 8px;
+    margin: 4px 2px;
+}
+
+.subcontainer-right {
+    height: 200px;
+    width: 50%;
+    padding: 30px;
+
     display: flex;
-    flex-direction: column;
-    width: 200px;
+    justify-content: center;
+    align-items: center;
+    background-color: gray;
 }
 
 
@@ -48,7 +81,7 @@ li {
 
 ul {
     display: flex;
-    gap: 8px;
+    gap: 16px;
     list-style: none;
 }
 
@@ -56,7 +89,22 @@ ul {
 
 .container-two{
     background-color: white;
-    height: 200px;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.information-text {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+    padding: 10px;
+    padding-bottom: 15px;
+    display: flex;
+
+  
+
 }
 
 /* Styling and setting up third container */
