--- a/style.css
+++ b/style.css
@@ -89,7 +89,10 @@ ul {
 
 .container-two{
     background-color: white;
-    height: 250px;
+    height: 300px;
+    padding-left: 300px;
+    padding-right: 300px;
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -102,9 +105,31 @@ ul {
     padding: 10px;
     padding-bottom: 15px;
     display: flex;
+}
 
-  
+.pictures-container {
+    width: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 12px;
+}
 
+.picture {
+    max-width: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.picture-template {
+    width: 100px;
+    height: 100px;
+    background-color: white;
+    border: solid 2px blue;
+    border-radius: 4px;
 }
 
 /* Styling and setting up third container */
