--- a/style.css
+++ b/style.css
@@ -1,18 +1,21 @@
+/* Setting up the body of the page so that all containers are aligned vertically */
+
 body {
     display: flex;
     flex-direction: column;
-
     margin: 0;
-    min-height: 100vh;
+    min-width: min-content;
 }
+
 
 /* Styling and setting up the first container */
 
-.container-one{
+#one {
     background-color: #1F2937;
-    height: 400px;
-    padding-left: 300px;
-    padding-right: 300px;
+    min-width: 0;
+    min-height: 0;
+    height: auto;
+    padding: 50px 150px 50px 150px;
 
     display: flex;
     flex-direction: column;
@@ -73,10 +76,11 @@ span.secondary-text {
 }
 
 
-li {
+a {
     font-size: 18px;
     color: #e5e7eb;
     text-decoration: none;
+    list-style: none;
 }
 
 ul {
@@ -87,11 +91,12 @@ ul {
 
 /* Styling and setting up second container */
 
-.container-two{
+#two {
     background-color: white;
-    height: 300px;
-    padding-left: 300px;
-    padding-right: 300px;
+    min-width: 0;
+    min-height: 0;
+    height: auto;
+    padding: 0px 150px 50px 150px;
 
     display: flex;
     flex-direction: column;
@@ -112,11 +117,13 @@ ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 12px;
+
+    gap: 20px;
+    padding: 8px;
 }
 
 .picture {
-    max-width: 250px;
+    max-width: 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -125,24 +132,100 @@ ul {
 }
 
 .picture-template {
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
+    margin: 4px;
     background-color: white;
-    border: solid 2px blue;
-    border-radius: 4px;
+    border: solid 2px rgb(29, 127, 238);
+    border-radius: 8px;
 }
 
 /* Styling and setting up third container */
 
-.container-three{
+#three {
     background-color: #e5e7eb;
-    height: 200px;
+    min-width: 0;
+    min-height: 0;
+    padding: 50px 150px 50px 150px;
+    height: auto;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.container-four{
-    background-color: white;
-    height: 200px;
+.quote-box {
+    padding-left: 300px;
+    padding-right: 300px;
+
+    display: flex;
+    flex-direction: column;
 }
+
+.quote {
+    font-weight: 100;
+    font-style: italic;
+    font-size: 36px;
+    color:#1F2937
+}
+
+.quotee {
+    font-weight: bold;
+
+    display: flex;
+    justify-content: flex-end;
+}
+
+/* Styling and setting up the fourth container */
+
+#four{
+    background-color: white;
+    min-width: 0;
+    min-height: 0;
+    padding: 50px 150px 50px 150px;
+    height: auto;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.subcontainer-four {
+    background-color: #3882f6;
+    padding: 50px 150px 50px 150px;px 300px 50px 300px;
+    border-radius: 8px;
+
+    display: flex;
+    justify-content: space-between;
+}
+
+.call-to-action {
+    color: white;
+    padding: 8px;
+    align-self: flex-start;
+}
+
+.call-to-action .text1{
+    font-weight: bold;
+}
+
+.sign-up-four{
+    align-self: flex-end;
+    color: white;
+    background-color: #3882f6;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    border: 2px solid white;
+    border-radius: 8px;
+    margin: 4px 2px;
+    padding: 2px 20px 2px 20px;
+
+}
+
+/* The bottom of the page that contains the footer */
 
 .footer {
     color: #e5e7eb;
